<resources>
    <string name="app_name">CountApp</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_share">Share!</string>
    <string name="action_reset_all">Reset All Counters</string>
    <string name="action_delete_all">Delete All Counters</string>

    <string name="AdMobAppID">ca-app-pub-7186830154970754~6108865556</string>
    <string name="adUnitID">ca-app-pub-7186830154970754/1975670119</string>

    <string name="title_activity_list">Counters</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About CountApp</string>
</resources>
